add security to swagger
